fix: Adjust sidebar active link background color for improved visibility

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -74,7 +74,7 @@
   --sidebar-accent-foreground: oklch(0.205 0 0);
   --sidebar-border: oklch(0.922 0 0);
   --sidebar-ring: oklch(0.708 0 0);
-  --sidebar-active-link-bg: oklch(80.877% 0.17029 75.348 / 0.336);
+  --sidebar-active-link-bg: oklch(70.09% 0.20117 44.755 / 0.466);
 }
 
 .dark {
@@ -109,7 +109,7 @@
   --sidebar-accent-foreground: oklch(0.985 0 0);
   --sidebar-border: oklch(1 0 0 / 10%);
   --sidebar-ring: oklch(0.556 0 0);
-  --sidebar-active-link-bg: oklch(48.417% 0.10107 77.506 / 0.466);
+  --sidebar-active-link-bg: oklch(70.09% 0.20117 44.755 / 0.836);
 }
 
 @layer base {
